--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  
+  cloud_firestore: ^5.6.0
+  firebase_auth: ^5.3.4
+  firebase_core: ^3.9.0
+  firebase_data_connect: ^0.1.0
+  firebase_messaging: ^15.1.6
+  firebase_storage: ^12.3.7
+  image_picker: ^1.1.2
   flutter:
     sdk: flutter
+  flutter_launcher_icons: "^0.14.2"
+  google_generative_ai: ^0.4.6
+  google_sign_in: ^6.2.2
+  http: ^1.2.2
+  intl: ^0.20.1
+  url_launcher: ^6.3.1
+  shared_preferences: ^2.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,7 +69,7 @@ dev_dependencies:
 flutter:
   assets:
     - Media/images/
-    - Media/icons/
+    - images/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
