--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter:
     sdk: flutter
+  provider: ^6.0.0  # Ensure this line is present
   flutter_launcher_icons: "^0.14.2"
   google_generative_ai: ^0.4.6
   google_sign_in: ^6.2.2
